--- a/airbnb.html
+++ b/airbnb.html
@@ -3,34 +3,165 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+    <link rel="stylesheet" type="text/css" href="main.css">
 </head>
+
 <body>
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <a class="navbar-brand" href="#">Airbnb</a>
+<div class="container-fluid">
+    <div class="row">
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">Airbnb</a>
+                </div>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <form class="navbar-form navbar-left">
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Search">
+                        </div>
+                    </form>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="#">Devenez höte</a></li>
+                        <li><a href="#"> Listes</a></li>
+                        <li><a href="#"> Voyages</a></li>
+                        <li><a href="#"> Messages</a></li>
+                        <li><a href="#"> Aide</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div id="nav">
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <ul class="list-inline">
+                            <li><a href="#">Dates</a></li>
+                            <li><a href="#">Voyageurs</a></li>
+                            <li><a href="#">Type de logement</a></li>
+                            <li><a href="#">Prix</a></li>
+                            <li><a href="#">Réservation instatanée</a></li>
+                            <li><a href="#">Type de voyage</a></li>
+                            <li><a href="#">Plus de filtres</a></li>
+                            <li><a href="#">Afficher la carte</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <div class="row" >
+
+            <div class="col-lg-2" style="text-align: center;" id="menu">
+                <div class="side-bar-sticky">
+                <h3> Les informations essentielles</h3>
+                    <hr/>
+
+                    <div class="form-group">
+                        <label for="exampleFormControlSelect1">dates</label>
+                        <select class="form-control" id="exampleFormControlSelect1" value="voyageurs">
+                            <option>1</option>>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleFormControlSelect1">Voyageur</label>
+                        <select class="form-control" id="exampleFormControlSelect1" value="voyageurs">
+                            <option>1</option>>
+                        </select>
+                    </div>
+                    <hr>
+                    <h3> Fourchette de prix</h3>
+                    <p></p>
+                    <hr>
+                    <h3>Types  de logement </h3>
+                    <p>Logement entier</p>
+                    <hr>
+                </div>
+            </div>
+
+
+                <div>
+                    <div class="container">
+                    <div class="row">
+                        <div class="col-lg-10 ">
+                        <div class="col-lg-12" style="border: 1px solid rgb(235, 235, 235) !important;border-radius: 3px !important;">
+                            <div class="col-lg-5">
+                                <img class="" src="https://a0.muscache.com/im/pictures/30067085/dff6fa7f_original.jpg?aki_policy=large "   width="100%" height="auto">
+                            </div>
+                                <div class="col-lg-5" style="">
+                            <p> Logement entier</p>
+                                    <p>Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son inclusion dans des applications de mise en page de texte, comme Aldus PageMaker.</p>
+                                </div>
+                            <div class="col-lg-2" >
+                                <p>65 €</p>
+                            </div>
+                        </div>
+                            <div class="col-lg-12" style="border: 1px solid rgb(235, 235, 235) !important;border-radius: 3px !important;">
+                                <div class="col-lg-5">
+                                    <img class="" src="https://a0.muscache.com/im/pictures/30067085/dff6fa7f_original.jpg?aki_policy=large "   width="100%" height="auto">
+                                </div>
+                                <div class="col-lg-5" style="">
+                                    <p> Logement entier</p>
+                                    <p>Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son inclusion dans des applications de mise en page de texte, comme Aldus PageMaker.</p>
+                                </div>
+                                <div class="col-lg-2" >
+                                    <p>65 €</p>
+                                </div>
+                            </div>
+                            <div class="col-lg-12" style="border: 1px solid rgb(235, 235, 235) !important;border-radius: 3px !important;">
+                                <div class="col-lg-5">
+                                    <img class="" src="https://a0.muscache.com/im/pictures/30067085/dff6fa7f_original.jpg?aki_policy=large "   width="100%" height="auto">
+                                </div>
+                                <div class="col-lg-5" style="">
+                                    <p> Logement entier</p>
+                                    <p>Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son inclusion dans des applications de mise en page de texte, comme Aldus PageMaker.</p>
+                                </div>
+                                <div class="col-lg-2" >
+                                    <p>65 €</p>
+                                </div>
+                            </div>
+                            <div class="col-lg-12" style="border: 1px solid rgb(235, 235, 235) !important;border-radius: 3px !important;">
+                                <div class="col-lg-5">
+                                    <img class="" src="https://a0.muscache.com/im/pictures/30067085/dff6fa7f_original.jpg?aki_policy=large "   width="100%" height="auto">
+                                </div>
+                                <div class="col-lg-5" style="">
+                                    <p> Logement entier</p>
+                                    <p>Appartement spa bla bla pkjkrezjktzejtlkrzjetifdps,gfkldsgirjg,k</p>
+                                </div>
+                                <div class="col-lg-2" >
+                                    <p>65 €</p>
+                                </div>
+                            </div>
+                            <div class="col-lg-12" style="border: 1px solid rgb(235, 235, 235) !important;border-radius: 3px !important;">
+                                <div class="col-lg-5">
+                                    <img class="" src="https://a0.muscache.com/im/pictures/30067085/dff6fa7f_original.jpg?aki_policy=large "   width="100%" height="auto">
+                                </div>
+                                <div class="col-lg-5" style="">
+                                    <p> Logement entier</p>
+                                    <p>Letraset contenant des passages du Lorem Ipsum, et, plus récemment, par son inclusion dans des applications de mise en page de texte, comme Aldus PageMaker.</p>
+                                </div>
+                                <div class="col-lg-2" >
+                                    <p>65 €</p>
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="col-lg-2" id="map">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d86684.44774679003!2d-1.6300959477737893!3d47.23831721358412!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4805ee81f0a8aead%3A0x40d37521e0ded30!2sNantes!5e0!3m2!1sfr!2sfr!4v1539245950216" width="600" height="650"   frameborder="0" style="border:0" allowfullscreen></iframe>
+                        </div>
+                    </div>
+
+                </div>
+        </div>
+                <div class="container-fluid">
+
+                </div>
+
         </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <form class="navbar-form navbar-left">
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Search">
-                </div>
-            </form>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Devenez höte</a></li>
-                <li><a href="#"> Listes</a></li>
-                <li><a href="#"> Voyages</a></li>
-                <li><a href="#"> Messages</a></li>
-                <li><a href="#"> Aide</a></li>
-            </ul>
-        </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-</nav>
-
+    </div>
+</div>
 
 </body>
 </html>
